@@ -108,7 +108,7 @@ name=moveto
 			[/status]
 		[/unit]
 		[unit]
-			x,y=4,9
+			x,y=12,8
 			type="Thief"
 			generate_description=yes
 		[/unit]
@@ -235,6 +235,11 @@ name=moveto
 	text="change coloring"
 	[/label]
 
+	[color_range]
+		id=blonde
+		rgb=255,255,0,255,255,128,0,0,0
+	[/color_range]
+
 	[event]
 	name=moveto
 	first_time_only=no
@@ -242,19 +247,41 @@ name=moveto
 		side=1
 		x=12
 		y=6
+		type="Thief"
+		[/filter]
+		[object]
+			id=bleach
+			name= _ "Potion of bleach"
+			image=items/potion-red.png
+			duration=level
+			description= _ "Oooh tingly!!!"
+			[effect]
+				apply_to=image_mod
+				replace="TC(thief>blonde)"
+
+				[color_palette]
+					thief=133,167,202,73,102,151,215,240,240,185,206,228,41,61,95,97,124,171
+				[/color_palette]	
+			[/effect]
+		[/object]
+	[/event]
+
+	[event]
+		name=moveto
+		first_time_only=no
+		[filter]
+			side=1
+			x=12
+			y=6
+			[not]
+				type="Thief"
+			[/not]
 		[/filter]
 		[message]
            		speaker=narrator
            		image=units/elves-wood/captain.png~TC(magenta>3)
-           		message=_ "Now you can spy on the green team.
-Does not work yet."
+           		message=_ "Send me a thief to spy on the blondes"
 	     [/message]
-		[effect]
-			apply_to=image
-			[image_mod]	
-				type=TC(magenta>3)
-			[/image_mod]
-		[/effect]
 	[/event]
 
 	[item]
